syntax = "proto3";

package user.v1alpha;

message User {
  int32 id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string password = 5;
  ResponseStatus status = 6;
}

service UserService {
  rpc Find (FindRequest) returns (FindResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message FindRequest {
  int32 id = 1;
  string username = 2;
}

message FindResponse {
  repeated User users = 1;
  ResponseStatus status = 2;
}

message ResponseStatus {
  int32 code = 1;
  string message = 2;
}


message RegisterRequest {
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 4;
}

message RegisterResponse {
  User user = 1;
  ResponseStatus status = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  User user = 2;
}

message UpdateUserResponse {
  User user = 1;
  ResponseStatus status = 2;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  int32 id = 1;
  User user = 2;
  ResponseStatus status = 3;
}

message Empty {}